<?xml version="1.0" encoding="UTF-8"?>
<!--

    Sonatype Nexus (TM) Open Source Version
    Copyright (c) 2007-2012 Sonatype, Inc.
    All rights reserved. Includes the third-party code listed at http://links.sonatype.com/products/nexus/oss/attributions.

    This program and the accompanying materials are made available under the terms of the Eclipse Public License Version 1.0,
    which accompanies this distribution and is available at http://www.eclipse.org/legal/epl-v10.html.

    Sonatype Nexus (TM) Professional Version is available from Sonatype, Inc. "Sonatype" and "Sonatype Nexus" are trademarks
    of Sonatype, Inc. Apache Maven is a trademark of the Apache Software Foundation. M2eclipse is a trademark of the
    Eclipse Foundation. All other trademarks are the property of their respective owners.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.sonatype.forge</groupId>
    <artifactId>forge-parent</artifactId>
    <version>30</version>
  </parent>

  <groupId>org.sonatype.nexus.plugins</groupId>
  <artifactId>nexus-p2-repository-plugin</artifactId>
  <version>2.3.1-SNAPSHOT</version>
  <packaging>nexus-plugin</packaging>

  <licenses>
    <license>
      <name>Eclipse Public License</name>
      <url>http://www.eclipse.org/legal/epl-v10.html</url>
    </license>
  </licenses>

  <scm>
    <connection>scm:git:git@github.com/sonatype/nexus-p2-repository-plugin.git</connection>
    <developerConnection>scm:git:ssh://git@github.com/sonatype/nexus-p2-repository-plugin.git</developerConnection>
    <url>http://github.com/sonatype/nexus-p2-repository-plugin</url>
  </scm>

  <repositories>
    <repository>
      <id>rso-public-grid</id>
      <url>https://repository.sonatype.org/content/groups/sonatype-public-grid/</url>
    </repository>
  </repositories>

  <pluginRepositories>
    <pluginRepository>
      <id>rso-public-grid</id>
      <url>https://repository.sonatype.org/content/groups/sonatype-public-grid/</url>
    </pluginRepository>
  </pluginRepositories>

  <properties>
    <nexus.version>2.3.0</nexus.version>
    <capabilities-plugin.version>2.2</capabilities-plugin.version>

    <nexus.plugin.name>Nexus P2 Repository Plugin</nexus.plugin.name>
    <nexus.plugin.description>Adds P2 repository support.</nexus.plugin.description>
    <nexusPluginType>nexus-plugin</nexusPluginType>

    <it.nexus.bundle.groupId>org.sonatype.nexus</it.nexus.bundle.groupId>
    <it.nexus.bundle.artifactId>nexus-oss-webapp</it.nexus.bundle.artifactId>
    <it.nexus.bundle.version>${nexus.version}</it.nexus.bundle.version>

    <test.log.pattern>%date %level [%thread%X{DC}] %logger - %msg%n</test.log.pattern>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.sonatype.nexus</groupId>
      <artifactId>nexus-plugin-api</artifactId>
      <version>${nexus.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.eclipse.tycho</groupId>
      <artifactId>tycho-metadata-model</artifactId>
      <version>0.12.0</version>
      <exclusions>
        <exclusion>
          <groupId>org.codehaus.plexus</groupId>
          <artifactId>plexus-utils</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>org.sonatype.nexus.plugins</groupId>
      <artifactId>nexus-p2-bridge-plugin</artifactId>
      <version>2.1</version>
      <type>${nexusPluginType}</type>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.sonatype.p2.bridge</groupId>
      <artifactId>org.sonatype.p2.bridge.api</artifactId>
      <version>1.1.5</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
      <version>5.11</version>
      <classifier>jdk15</classifier>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest-library</artifactId>
      <version>1.3.RC2</version>
      <scope>test</scope>
    </dependency>

    <!-- core To override any version from transitive dependencies. -->
    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest-core</artifactId>
      <version>1.3.RC2</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.sonatype.plexus</groupId>
      <artifactId>plexus-jetty-testsuite</artifactId>
      <version>2.1</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.sonatype.nexus</groupId>
      <artifactId>nexus-plugin-test-api</artifactId>
      <version>${nexus.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.sonatype.nexus</groupId>
      <artifactId>nexus-test-harness-launcher</artifactId>
      <version>${nexus.version}</version>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <artifactId>plexus-container-default</artifactId>
          <groupId>org.codehaus.plexus</groupId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>org.sonatype.nexus.plugins</groupId>
      <artifactId>nexus-capabilities-plugin</artifactId>
      <version>${capabilities-plugin.version}</version>
      <type>${nexusPluginType}</type>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.maven.shared</groupId>
      <artifactId>maven-verifier</artifactId>
      <version>1.3</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.sonatype.nexus.capabilities</groupId>
      <artifactId>nexus-capabilities-client</artifactId>
      <version>${capabilities-plugin.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.6</source>
          <target>1.6</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.sonatype.plugins</groupId>
        <artifactId>app-lifecycle-maven-plugin</artifactId>
        <version>1.7</version>
        <extensions>true</extensions>
        <configuration>
          <pluginSiteUrl>http://links.sonatype.com/products/nexus/oss/plugins/p2</pluginSiteUrl>
          <pluginName>${nexus.plugin.name}</pluginName>
          <pluginDescription>${nexus.plugin.description}</pluginDescription>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.sonatype.plugins</groupId>
            <artifactId>app-lifecycle-nexus</artifactId>
            <version>1.7</version>
          </dependency>
        </dependencies>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <testNGArtifactName>none:none</testNGArtifactName>
          <argLine>-Xmx512m</argLine>
          <junitArtifactName>junit:junit-dep</junitArtifactName>
          <failIfNoTests>false</failIfNoTests>
          <systemProperties>
            <property>
              <name>user.home</name>
              <value>${project.build.directory}/user_home</value>
            </property>
          </systemProperties>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <configuration>
          <argLine>-XX:PermSize=220m -XX:MaxPermSize=220m -Xmx600M -XX:+HeapDumpOnOutOfMemoryError</argLine>
          <junitArtifactName>none:none</junitArtifactName>
          <testNGArtifactName>org.testng:testng</testNGArtifactName>
          <workingDirectory>${project.build.directory}</workingDirectory>
          <excludes>
            <exclude>**/*$*</exclude>
            <exclude>**/Abstract*</exclude>
          </excludes>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>it</id>
      <activation>
        <property>
          <name>it</name>
        </property>
      </activation>

      <build>
        <plugins>
          <plugin>
            <groupId>org.sonatype.plugins</groupId>
            <artifactId>sisu-maven-bridge-maven-plugin</artifactId>
            <version>3.0</version>
            <executions>
              <execution>
                <goals>
                  <goal>export</goal>
                </goals>
              </execution>
            </executions>
          </plugin>

          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-failsafe-plugin</artifactId>
            <executions>
              <execution>
                <goals>
                  <goal>integration-test</goal>
                  <goal>verify</goal>
                </goals>
              </execution>
            </executions>
          </plugin>

          <plugin>
            <groupId>org.sonatype.nexus.plugins</groupId>
            <artifactId>nexus-test-environment-maven-plugin</artifactId>
            <version>${nexus.version}</version>
            <executions>
              <execution>
                <goals>
                  <goal>setup-nexus-plugin-environment</goal>
                  <goal>package</goal>
                </goals>
              </execution>
            </executions>
            <configuration>
              <nexusBundleArtifact>
                <groupId>${it.nexus.bundle.groupId}</groupId>
                <artifactId>${it.nexus.bundle.artifactId}</artifactId>
                <version>${it.nexus.bundle.version}</version>
                <type>zip</type>
                <classifier>bundle</classifier>
              </nexusBundleArtifact>
              <nexusPluginsArtifacts>
                <plugin>
                  <groupId>org.sonatype.nexus</groupId>
                  <artifactId>nexus-it-helper-plugin</artifactId>
                  <version>${nexus.version}</version>
                  <classifier>cp</classifier>
                  <type>jar</type>
                </plugin>
                <plugin>
                  <groupId>org.sonatype.nexus</groupId>
                  <artifactId>nexus-it-helper-plugin</artifactId>
                  <version>${nexus.version}</version>
                  <classifier>bundle</classifier>
                  <type>zip</type>
                </plugin>
              </nexusPluginsArtifacts>
            </configuration>
          </plugin>
          <!-- HACK: This plugin is here just to force download of plugins used in poms built via Verifier -->
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-invoker-plugin</artifactId>
            <version>1.8</version>
            <executions>
              <execution>
                <goals>
                  <goal>install</goal>
                </goals>
                <configuration>
                  <extraArtifacts>
                    <extraArtifact>org.sonatype.maven.plugins:maven-p2-bridge-plugin:1.0.8</extraArtifact>
                    <extraArtifact>org.apache.maven.plugins:maven-clean-plugin:2.4.1</extraArtifact>
                  </extraArtifacts>
                  <localRepositoryPath>${project.build.directory}/maven-local-repository</localRepositoryPath>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <id>idea</id>
      <properties>
        <nexusPluginType>jar</nexusPluginType>
      </properties>
    </profile>
  </profiles>
</project>
